assignment3/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort 
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30007  
  selector:
    app: nginx
