assignment3/app-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /app-2
        pathType: Prefix
        backend:
          service:
            name: app-2-svc
            port:
              number: 3000
